Improved IPhone Audio Activation look; Corrected cropping issue in banner;

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -12,6 +12,12 @@
     margin-top: 0;
 }
 
+#iphoneKludge
+{
+    margin-top: 0;
+    padding-top: 0;
+}
+
 .soundboard-clip
 {
     margin-bottom: 1em;
